News Page Changes.

--- a/dotnet.html
+++ b/dotnet.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/dotnet.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
     <title>CodedChalk</title>
@@ -51,7 +49,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -65,8 +63,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -102,9 +101,9 @@
                                     <div class="inner">
 
                                         <div class="hero-title">
-                                            <!-- <span>M</span>
+                                            <span>M</span>
                                             <span>S</span>
-                                            <span></span> -->
+                                            <span></span>
                                             <span>.</span>
 
                                             <span>N</span>
@@ -182,14 +181,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -225,9 +224,9 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
-                                    
+                                    Asp.Net Mvc, Asp.Net Core Mvc, Repository Pattern, Web Api, Asp.Net Identity, Entity Framework, Cross Platform Web Apps
                                     <hr>
 
                                     <div class="one_half">
@@ -255,14 +254,15 @@
                                         <p class="has-animation">Section 17: ASP.Net Identity</p>
                                         <p class="has-animation">Section 18: Filters & Built In Filters</p>
                                         <p class="has-animation">Section 19: Security</p>
-                                       
+                                        <p class="has-animation">Section 20: Exception Handling in MVC</p>
 
 
                                     </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 20: Exception Handling in MVC</p>
-                                        <p class="has-animation">Section 21: Service Pattern & Repository Pattern
+
+                                        <p class="has-animation">
+                                            Section 21: Service Pattern & Repository Pat-
                                         </p>
                                         <p class="has-animation">
                                             Section 22: State Management
@@ -277,7 +277,7 @@
                                             Section 25: Sample Project - StackOverflow Clone
                                         </p>
                                         <p class="has-animation">
-                                            Section 26: Create & Examine Our First ASP.NET Core 1.0 Web & Console App
+                                            Section 26: Create & Examine Our First ASP-NET Core 1.0 Web & Console App
 
                                         </p>
                                         <p class="has-animation"> Section 27: MVC & MVC 6 Features & RC2 to 1.0 Migration
@@ -295,7 +295,7 @@
 
                                         <p class="has-animation">
 
-                                            Section 32: Angular & .Net Core Integration
+                                            Section 32: Angular & . Net Core Integration
                                         </p>
                                         <p class="has-animation">
 
@@ -326,15 +326,12 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="https://formspree.io/f/xgeroaob">
+                                    <form method="post" action="https://formspree.io/f/mrgrzprq">
                                         <div class="name-box has-animation" data-delay="100">
                                             <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                         </div>
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                        </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                         </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -385,12 +382,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                   <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -424,12 +420,12 @@
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 
 
@@ -438,6 +434,4 @@
 
 
 
-
-<!-- Mirrored from codedchalk.com/dotnet.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
