--- a/frontenddevelopment.html
+++ b/frontenddevelopment.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/frontenddevelopment.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
     <title>CodedChalk</title>
@@ -57,7 +55,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -71,8 +69,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -201,14 +200,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -244,51 +243,74 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
                                     <hr>
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">Section 1: Modern Web Development introduction to course content </p>
-                                        <p class="has-animation">Section 2: Learn HTML fundamentals of website</p>
-                                        <p class="has-animation">Section 3: Learn CSS fundamentals of website development</p>
-                                        <p class="has-animation">Section 4: CSS Next Steps</p>
-                                        <p class="has-animation">Section 5: JavaScript creating interactive Dynamic Content</p>
-                                        <p class="has-animation">Section 6: Writing JavaScript code</p>
-                                        <p class="has-animation">Section 7: JavaScript in Action get Dynamic and Interactive</p>
-                                        <p class="has-animation">Section 8: JavaScript fundamentals</p>
-                                        <p class="has-animation">Section 9: JavaScript JSON and AJAX</p>
-                                        <p class="has-animation">Section 10: Bootstrap4</p>
+                                        <p class="has-animation">
+                                            introduction to course content
+                                        </p>
+                                        <p class="has-animation">Section 1: Modern Web Development </p>
+                                        <p class="has-animation">Section2:Learn HTML fundamentals of website</p>
+                                        <p class="has-animation">Section3:Learn CSS fundamentals of website development</p>
+                                        <p class="has-animation">Section4:CSS Next Steps</p>
+                                        <p class="has-animation">Section5:JavaScript creating interactive Dynamic Content</p>
+                                        <p class="has-animation">Section6:Writing JavaScript code</p>
+                                        <p class="has-animation">Section7:JavaScript in Action get Dynamic and Interactive</p>
+                                        <p class="has-animation">Section8:JavaScript fundamentals</p>
+                                        <p class="has-animation">Section9:JavaScript JSON and AJAX</p>
+                                        <p class="has-animation">Section10:Bootstrap4</p>
+                                        <p class="has-animation">Section12:jQUERY easy AJAX</p>
+                                        <p class="has-animation">Section13:jQuery Traversing</p>
+                                        <p class="has-animation">Section14:jQuery Styling</p>
+                                        <p class="has-animation">Section15:jQUERY Effects and Animations</p>
+                                        <p class="has-animation"></p>
+
+
                                     </div>
+
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 11: jQUERY for quicker coding</p>
-                                        <p class="has-animation">Section 12: jQUERY easy AJAX</p>
-                                        <p class="has-animation">Section 13: jQuery Traversing</p>
-                                        <p class="has-animation">Section 14: jQuery Styling</p>
-                                        <p class="has-animation">Section 15: jQUERY Effects and Animations</p>
+
                                         <p class="has-animation">
-                                            Section 16: jQuery AJAX
+                                            Section16:jQueryAJAX
                                         </p>
                                         <p class="has-animation">
-                                            Section 17: Bringing it together HTML CSS and jQuery
+                                            Section17:Bringing it together HTML CSS and jQuery
                                         </p>
                                         <p class="has-animation">
-                                            Section 18: SASS Basics
+                                            Section18:SASS Basics
                                         </p>
                                         <p class="has-animation">
-                                            Section 19: SASS Advanced
+                                            Section19:SASS Advanced
                                         </p>
                                         <p class="has-animation">
-                                            Section 20: Deploying on Server
+                                            Section20:Deploying on Server
                                         </p>
                                         <p class="has-animation">
-                                            Section 21: Website Optimization
+                                            Section21:Website Optimization
                                         </p>
                                         <p class="has-animation">
-                                            Section 22: Scheme a Markup</p>
-                                            
+                                            Section22:Scheme a Markup</p>
+
 
                                     </div>
                                 </div>
@@ -310,15 +332,12 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="https://formspree.io/f/xgeroaob">
+                                    <form method="post" action="https://formspree.io/f/mrgrzprq">
                                         <div class="name-box has-animation" data-delay="100">
                                             <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                         </div>
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                        </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                         </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -369,12 +388,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -408,15 +426,13 @@
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
-
-<!-- Mirrored from codedchalk.com/frontenddevelopment.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
