--- a/media.html
+++ b/media.html
@@ -17,7 +17,13 @@
 
 </head>
 
-
+<style>
+    @media screen and (max-width: 768px) {
+        .video {
+            min-width: 360px;
+        }
+    }
+</style>
 
 <body class="hidden hidden-ball smooth-scroll">
 
@@ -88,152 +94,43 @@
                 <!--/Header -->
                 <!-- Content Scroll -->
                 <div id="content-scroll">
-
-
                     <!-- Main -->
                     <div id="main">
                         <!-- Main Content -->
                         <div id="main-content">
-
-
-
                             <!-- Showcase Holder -->
                             <div id="showcase-holder">
                                 <div id="showcase-carousel" class="swiper-container">
                                     <div class="swiper-wrapper">
 
-
-                                        <!-- Section Slide -->
                                         <div class="swiper-slide">
                                             <div class="img-mask">
                                                 <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/01hero.jpg"></div>
+                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube.com/embed/3KhX20ozC9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                 </div>
                                             </div>
                                             <a class="showcase-link-project" data-type="page-transition" href="Angular.html"></a>
                                             <div class="slide-caption">
-                                                <h2 class="slide-title">Angular Development</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">504 Sessions</span></h4>
+                                                <h2 class="slide-title">CodedChalk Introduction</h2>
                                             </div>
                                         </div>
-                                        <!--/Section Slide -->
 
-
-                                        <!-- Section Slide -->
                                         <div class="swiper-slide">
                                             <div class="img-mask">
                                                 <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/02hero.jpg"></div>
+                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube.com/embed/MVOy7KicoL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                 </div>
                                             </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="uiandux.html"></a>
+                                            <a class="showcase-link-project" data-type="page-transition" href="Angular.html"></a>
                                             <div class="slide-caption">
-                                                <h2 class="slide-title">UI UX Designing</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">504 Sessions</span></h4>
+                                                <h2 class="slide-title">Is Domain Change Possible?</h2>
                                             </div>
                                         </div>
-                                        <!--/Section Slide -->
-
-                                        <!-- Section Slide -->
-                                        <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/03hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="reactjs.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">React</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">543 Sessions</span></h4>
-                                            </div>
-                                        </div>
-                                        <!--/Section Slide -->
-
-                                        <!-- Section Slide -->
-                                        <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/04hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="ios.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">iOS</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">251 Sessions</span></h4>
-                                            </div>
-                                        </div>
-                                        <!--/Section Slide -->
-
-
-                                        <!-- Section Slide -->
-                                        <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/05hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="android.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">Android</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">229 Sessions</span></h4>
-                                            </div>
-                                        </div>
-                                        <!--/Section Slide -->
-
-
-                                        <!-- Section Slide -->
-                                        <!-- <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/06hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="nodejs.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">Node Js</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">Photography</span></h4>
-                                            </div>
-                                        </div> -->
-                                        <!--/Section Slide -->
-
-
-                                        <!-- Section Slide -->
-                                        <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/07hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="dotnet.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">Microsoft .Net</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">462 Sessions</span></h4>
-                                            </div>
-                                        </div>
-                                        <!--/Section Slide -->
-
-
-                                        <!-- Section Slide -->
-                                        <div class="swiper-slide">
-                                            <div class="img-mask">
-                                                <div class="section-wrap-image">
-                                                    <div class="section-image" data-src="images/08hero.jpg"></div>
-                                                </div>
-                                            </div>
-                                            <a class="showcase-link-project" data-type="page-transition" href="frontenddevelopment.html"></a>
-                                            <div class="slide-caption">
-                                                <h2 class="slide-title">Front-end Development</h2>
-                                                <h4 class="slide-cat"><span data-hover="View Case">504 Sessions</span></h4>
-                                            </div>
-                                        </div>
-                                        <!--/Section Slide -->
 
                                     </div>
                                 </div>
                             </div>
                             <!-- Showcase Holder -->
-
-
                         </div>
                         <!--/Main Content -->
                     </div>
@@ -247,24 +144,6 @@
                 <!-- Footer -->
                 <footer class="fixed">
                     <div id="footer-container">
-
-                        <div class="button-wrap left">
-                            <div class="icon-wrap parallax-wrap">
-                                <div class="button-icon parallax-element">
-                                    <div class="bars">
-                                        <div class="bar"></div>
-                                        <div class="bar"></div>
-                                        <div class="bar"></div>
-                                        <div class="bar"></div>
-                                        <div class="bar"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="button-text"><span data-on="Sound On" data-off="Sound Off">Sound On</span></div>
-                        </div>
-
-                        <div class="swiper-scrollbar"></div>
-
                         <div class="socials-wrap">
                             <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                             <div class="socials-text">Follow us</div>
@@ -276,11 +155,9 @@
                                 <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                             </ul>
                         </div>
-
                     </div>
                 </footer>
                 <!--/Footer -->
-
 
                 <div class="thumb-container">
                     <div class="thumb-page" data-src="images/01hero.jpg"></div>
@@ -294,7 +171,6 @@
                     <div class="thumb-page" data-src="images/09hero.jpg"></div>
                     <div class="thumb-page" data-src="images/10hero.jpg"></div>
                 </div>
-
 
             </div>
             <!--/Page Content -->
