--- a/about.html
+++ b/about.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
 
@@ -52,7 +50,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -66,8 +64,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -206,12 +205,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                   <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -242,18 +240,16 @@
     <div id="rotate-device"></div>
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 
 </body>
 
 
 
-
-<!-- Mirrored from codedchalk.com/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
