--- a/android.html
+++ b/android.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/android.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
 
@@ -54,7 +52,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -68,8 +66,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -186,14 +185,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -229,7 +228,7 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
 
                                     <hr>
@@ -239,7 +238,7 @@
                                         <p class="has-animation">
                                             Section 1: Introduction
                                         </p>
-                                        <p class="has-animation">Section 2: Install and Setup Software for Android App Development
+                                        <p class="has-animation">Section2:Install and Setup Software for Android App Development
                                         </p>
                                         <p class="has-animation">Section 3: Install and Setup
                                         </p>
@@ -247,8 +246,8 @@
                                         </p>
                                         <p class="has-animation">Section 5: Learn Java Programming From Scratch!
                                         </p>
-                                        <p class="has-animation">Section 6: Java Advanced Concepts </p>
-                                        <p class="has-animation">Section 7: Java Programming Advanced Concepts-Inheritance and DataStructure
+                                        <p class="has-animation">Section 6: Java Advanced </p>
+                                        <p class="has-animation">Concepts Section 7: Java Programming Advanced Concepts-Inheritance and DataStructure
                                         </p>
                                         <p class="has-animation">Section 8: Android App Development Tools
                                         </p>
@@ -261,13 +260,13 @@
                                         <p class="has-animation">Section 12: Debugging
                                         </p>
                                         <p class="has-animation">Section 13: What Are Activities And How to work with Navigation - Java / Android</p>
-                                       
+                                        <p class="has-animation">Section 14: Recycler Views - Listviews alternative - Introduction</p>
+                                        <p class="has-animation">Section 15: User Interface - Android Layouts XML</p>
+
 
                                     </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 14: Recycler Views - Listviews alternative - Introduction</p>
-                                        <p class="has-animation">Section 15: User Interface - Android Layouts XML</p>
 
                                         <p class="has-animation">
                                             Section 16: Android Media Player
@@ -330,9 +329,6 @@
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
                                         </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
-                                        </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
                                         </div>
@@ -382,12 +378,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -421,12 +416,12 @@
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 
 
@@ -435,6 +430,4 @@
 
 
 
-
-<!-- Mirrored from codedchalk.com/android.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
