--- a/angular.html
+++ b/angular.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/angular.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
 
@@ -54,7 +52,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -68,8 +66,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -134,7 +133,7 @@
 
                                     <hr>
 
-                                    <h2 class="has-mask">Master Angular (formerly "Angular 2") and build awesome, reactive web app with the successor of Angular.js </h2>
+                                    <h2 class="has-mask">Master Angular (formerly "Angular 2")and build awesome,reactive web app with the successor of Angular.js </h2>
 
                                     <div style="display: flex; justify-content: space-between; padding-right: 20px;">
                                         <div>
@@ -184,14 +183,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -227,14 +226,16 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
-                                    Master Angular (formerly "Angular 2") and build awesome, reactive web app with the successor of Angular.js
+                                    Master Angular (formerly "Angular 2")and build awesome,reactive web app with the successor of Angular.js
                                     <hr>
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">Section 1: Getting Started</p>
+                                        <p class="has-animation">
+                                            Section 1: Getting Started
+                                        </p>
                                         <p class="has-animation">Section 2: The Basics</p>
                                         <p class="has-animation">Section 3: Course Project- The Basics</p>
                                         <p class="has-animation">Section 4: Debugging</p>
@@ -247,26 +248,45 @@
                                         <p class="has-animation">Section 12: Course Project - Routing</p>
                                         <p class="has-animation">Section 13: Under standing Observables</p>
                                         <p class="has-animation">Section 14: Course Project- Observables</p>
-                                        
+                                        <p class="has-animation">Section 15: Handling Forms in Angular Apps</p>
                                         <p class="has-animation"></p>
 
 
                                     </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 15: Handling Forms in Angular Apps</p>
-                                        <p class="has-animation">Section 16: Course Project - Forms</p>
-                                        <p class="has-animation">Section 17: Using Pipes to Transform Output</p>
-                                        <p class="has-animation">Section 18: Making Http Requests</p>
-                                        <p class="has-animation">Section 19: Course Project - Http</p>
-                                        <p class="has-animation">Section 20: Authentication & Route Protection in Angular</p>
-                                        <p class="has-animation">Section 21: Dynamic Components</p>
-                                        <p class="has-animation">Section 22: Angular Modules & Optimizing</p>
-                                        <p class="has-animation">Section 23: Deployingan Angular App</p>
-                                        <p class="has-animation">Section 24: Bonus: Working with NgRxinour Project</p>
-                                        <p class="has-animation">Section 25: Bonus: Angular Universal</p>
-                                        <p class="has-animation">Section 26: Angular Animations</p>
-                                        <p class="has-animation">Section 27: Adding Offline Capabilities</p>
+
+                                        <p class="has-animation">
+                                            Section 16: Course Project - Forms
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 17: Using Pipes to Transform Output
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 18: Making Http Requests
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 19: Course Project - Http
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 20: Authentication & Route Protection in Angular
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 21: Dynamic Components
+                                        </p>
+                                        <p class="has-animation"> Section 22: Angular Modules & Optimizing</p>
+                                        <p class="has-animation"> Section 23: Deployingan Angular App</p>
+                                        <p class="has-animation"> Section 24: Bonus: Working with NgRxinour Project
+                                        </p>
+                                        <p class="has-animation"> Section 25: Bonus: Angular Universal</p>
+                                        <p class="has-animation"> Section 26: Angular Animations</p>
+
+
+
+                                        <p class="has-animation">
+
+                                            Section 27: Adding Offline Capabilities
+                                        </p>
 
                                     </div>
                                 </div>
@@ -288,15 +308,12 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="https://formspree.io/f/xgeroaob">
+                                    <form method="post" action="https://formspree.io/f/mrgrzprq">
                                         <div class="name-box has-animation" data-delay="100">
                                             <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                         </div>
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                        </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                         </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -347,12 +364,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -386,17 +402,15 @@
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
     <!-- <script src="/js/plugins.js"></script> -->
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 
 </body>
 
 
-
-<!-- Mirrored from codedchalk.com/angular.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
