--- a/ios.html
+++ b/ios.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/ios.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
     <title>CodedChalk</title>
@@ -52,7 +50,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -66,8 +64,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -129,7 +128,7 @@
 
                                     <hr>
 
-                                    <h2 class="has-mask">The most comprehensive course on iOS development - become a master of app development
+                                    <h2 class="has-mask">The most comprehensive course on ios Development - become a master of app Development
                                     </h2>
 
                                     <div style="display: flex; justify-content: space-between; padding-right: 20px;">
@@ -180,14 +179,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -223,40 +222,67 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
 
                                     <hr>
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">Section 1: Getting Started With iOS 10 & Swift 3
+                                        <p class="has-animation">
+                                            Section 1: Introduction
                                         </p>
-                                        <p class="has-animation">Section 2: Learn to code with Swift</p>
-                                        <p class="has-animation">Section 3: Version Control With Git & Github</p>
-                                        <p class="has-animation">Section 4: Foundational iOS</p>
-                                        <p class="has-animation">Section 5: Working With REST & Web Requests on iOS 10 & Swift 3</p>
-                                        <p class="has-animation">Section 6: Data Persistence & Core Data</p>
-                                        <p class="has-animation">Section 7: Protocol Oriented Programming and Advanced Swift</p>
-                                        <p class="has-animation">Section 8: iOS Hot New Features</p>
+                                        <p class="has-animation">Section 2: Install and Setup Software for Android App Development
+                                        </p>
+                                        <p class="has-animation">Section 3: Install and Setup
+                                        </p>
+                                        <p class="has-animation">Section 4: Android Resources and Theoretical Guidelines
+                                        </p>
+                                        <p class="has-animation">Section 5: Learn Java Programming From Scratch!
+                                        </p>
+                                        <p class="has-animation">Section 6: Java Advanced </p>
+                                        <p class="has-animation">Concepts Section 7: Java Programming Advanced Concepts
+                                        </p>
+                                        <p class="has-animation">Section8:iOS Hot New Features
+                                        </p>
                                         <p class="has-animation">Section 9: Building Full Stack Apps With Firebase</p>
-                                        <p class="has-animation">Section 10: Maps, GPS, Geolocation, Pokemon & Firebase</p>
-                                        <p class="has-animation">Section 11: Creating A Social Network With Firebase</p>
-                                       
+                                        <p class="has-animation">Section 10: Maps, GPS, Geolocation, Pokemon & Firebase
+                                        </p>
+                                        <p class="has-animation">Section 11: Creating A Social Network With Firebase
+
+                                        </p>
+                                        <p class="has-animation">Section 12: Intermediate: Creating a Snapchat Clone With Firebase
+                                        </p>
+                                        <p class="has-animation">Section 13: Designing Mobile Apps With Sketch</p>
+                                        <p class="has-animation">Section 14: Designing A Chat App in Sketch</p>
+                                        <p class="has-animation">Section 15: Designing An Social Media App in Sketch</p>
+
 
                                     </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 12: Intermediate: Creating a Snapchat Clone With Firebase</p>
-                                        <p class="has-animation">Section 13: Designing Mobile Apps With Sketch</p>
-                                        <p class="has-animation">Section 14: Designing A Chat App in Sketch</p>
-                                        <p class="has-animation">Section 15: Designing An Social Media App in Sketch</p>
-                                        <p class="has-animation">Section 16: Objective-C</p>
-                                        <p class="has-animation">Section 17: A Deeper Look Into Objective-C Sketch</p>
-                                        <p class="has-animation">Section 18: Advanced Objective-C</p>
-                                        <p class="has-animation">Section 19: Objective-C Building A Tutorial & Youtube App</p>
-                                        <p class="has-animation">Section 20: Design, Provisioning, Testing, and iOS App Submission</p>
-                                        <p class="has-animation">Section 21: Bonus: Devslopes Online Bootcamp Sketch Classroom Sessions</p>
+
+                                        <p class="has-animation">
+                                            Section16: Objective-C
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 17: A Deeper Look Into Objective-C Sketch
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 18: Advanced Objective-C
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 19: Objective-C Building A Tutorial & Youtube App
+
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 20: Design, Provisioning, Testing, and iOS App Submission
+
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 21: Bonus: Devslopes Online Bootcamp Sketch Classroom Sessions
+
+                                        </p>
 
 
                                     </div>
@@ -279,15 +305,12 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="https://formspree.io/f/xgeroaob">
+                                    <form method="post" action="https://formspree.io/f/mrgrzprq">
                                         <div class="name-box has-animation" data-delay="100">
                                             <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                         </div>
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                        </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                         </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -338,12 +361,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -377,16 +399,14 @@
 
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 
 </body>
 
-
-<!-- Mirrored from codedchalk.com/ios.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
