--- a/reactjs.html
+++ b/reactjs.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/reactjs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
     <title>CodedChalk</title>
@@ -52,7 +50,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -66,8 +64,9 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
                                             <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -182,14 +181,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -225,7 +224,7 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                     </h2>
 
                                     <hr>
@@ -235,7 +234,7 @@
                                         <p class="has-animation">
                                             Section I: Getting Started
                                         </p>
-                                        <p class="has-animation">Section 2: Refreshing Next Generation Java-Script (Optional)
+                                        <p class="has-animation">Section 2: Refreshing Next Generation JavaS- cript (Optional)
                                         </p>
                                         <p class="has-animation">Section 3: Understanding the Base Features & Syntax
                                         </p>
@@ -249,30 +248,50 @@
                                         </p>
                                         <p class="has-animation">Section 9: Reaching out to the Web (Http / Ajax)</p>
                                         <p class="has-animation">Section 10: Burger Builder </p>
-                                        <p class="has-animation">Section 11: Multi-Page-FeeIing in a Sin- gle-Page-App: Routing
+                                        <p class="has-animation">Section Il: Multi-Page-FeeIing in a Sin- gle-Page-App: Routing
                                         </p>
                                         <p class="has-animation">Section 12: Adding Routing to Burger Project</p>
                                         <p class="has-animation">Section 13: Forms and Form Validation</p>
-                                        
+                                        <p class="has-animation">Section 14: Redux</p>
+                                        <p class="has-animation">Section 15: Adding Redux to our Project</p>
 
 
                                     </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">Section 14: Redux</p>
-                                        <p class="has-animation">Section 15: Adding Redux to our Project</p>
-                                        <p class="has-animation">Section 16: Course Project - Forms</p>
-                                        <p class="has-animation">Section 17: Using Pipes to Transform Output</p>
-                                        <p class="has-animation">Section 18: Making Http Requests</p>
-                                        <p class="has-animation">Section 19: Course Project - Http</p>
-                                        <p class="has-animation">Section 20: Authentication & Route Protection in Angular</p>
-                                        <p class="has-animation">Section 21: Dynamic Components</p>
-                                        <p class="has-animation">Section 22: Angular Modules & Optimizing</p>
+
+                                        <p class="has-animation">
+                                            Section 16: Course Project - Forms
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 17: Using Pipes to Transform Output
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 18: Making Http Requests
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 19: Course Project - Http
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 20: Authentication & Route Protection in Angular
+
+                                        </p>
+                                        <p class="has-animation">
+                                            Section 21: Dynamic Components
+                                        </p>
+                                        <p class="has-animation"> Section 22: Angular Modules & Optimizing</p>
                                         <p class="has-animation">Section 23: Deploying an Angular App</p>
-                                        <p class="has-animation">Section 24: Bonus: Working with NgRx in our Project                                        </p>
+                                        <p class="has-animation"> Section 24: Bonus: Working with NgRx in our Project
+                                        </p>
                                         <p class="has-animation">Section 25: Bonus: Angular Universal</p>
-                                        <p class="has-animation">Section 26: Angular Animations</p>
-                                        <p class="has-animation">Section 27: Adding Offline Capabilities</p>
+                                        <p class="has-animation"> Section 26: Angular Animations</p>
+
+
+
+                                        <p class="has-animation">
+
+                                            Section 27: Adding Offline Capabilities
+                                        </p>
 
                                     </div>
                                 </div>
@@ -294,15 +313,12 @@
 
                                     <div id="message"></div>
 
-                                    <form method="post" action="https://formspree.io/f/xgeroaob">
+                                    <form method="post" action="https://formspree.io/f/mrgrzprq">
                                         <div class="name-box has-animation" data-delay="100">
                                             <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                         </div>
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                        </div>
-                                        <div class="contact-box has-animation" data-delay="100">
-                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                         </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -353,12 +369,11 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                 </ul>
                             </div>
 
@@ -388,15 +403,13 @@
     <div id="rotate-device"></div>
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
-
-<!-- Mirrored from codedchalk.com/reactjs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
