--- a/uiandux.html
+++ b/uiandux.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 
-
-<!-- Mirrored from codedchalk.com/uiandux.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 <head>
 
     <title>CodedChalk</title>
@@ -52,7 +50,7 @@
 
                         <!-- Logo -->
                         <div id="logo" class="hide-ball">
-                            <a class="ajax-link logo" data-type="page-transition" href="index-2.html">
+                            <a class="ajax-link logo" data-type="page-transition" href="index.html">
                                 <!-- <img class="black-logo" src="images/logo.png" alt="codedchalk Logo">
                                 <img class="white-logo" src="images/logo-white.png" alt="codedchalk Logo"> -->
                                 CODEDCHALK
@@ -66,12 +64,10 @@
                                 <div class="outer">
                                     <div class="inner">
                                         <ul data-breakpoint="1025" class="flexnav">
-                                            <li class="link menu-timeline"><a href="courses.html"><span
-                                                        data-hover="Courses">Courses</span></a></li>
-                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span
-                                                        data-hover="About">About</span></a></li>
-                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span
-                                                        data-hover="Contact">Contact</span></a></li>
+                                            <li class="link menu-timeline"><a href="/courses.html"><span data-hover="Courses">Courses</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><span data-hover="About">About</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="media.html"><span data-hover="News">News</span></a></li>
+                                            <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><span data-hover="Contact">Contact</span></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -183,14 +179,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher.
+                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knowledge
+                                            Share Knwoledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -226,7 +222,7 @@
                                 <!-- Row -->
                                 <div class="vc_row row_padding_top small">
 
-                                    <h2 class="has-mask">This is What we are going to Dive into
+                                    <h2 class="has-mask">This Is What our Courses Are Like
                                         <h6>
                                             Adobe Photoshop
                                         </h6>
@@ -249,13 +245,17 @@
                                         <p class="has-animation">7. Crop and resize images using various settings.</p>
                                         <p class="has-animation">8. Use Bridge with Photoshop.</p>
                                         <p class="has-animation">9. Rearrange, group, and adjust settings of layers.</p>
+                                        <p class="has-animation">10. Adjust layer blending modes.</p>
+
                                         <p class="has-animation"></p>
                                         <p class="has-animation"></p>
 
-                                     </div>
+
+
+                                    </div>
 
                                     <div class="one_half last">
-                                        <p class="has-animation">10. Adjust layer blending modes.</p>
+
                                         <p class="has-animation">11. Create and apply a variety of adjustment layers.</p>
                                         <p class="has-animation">12. Create and apply various layer styles.</p>
                                         <p class="has-animation">13. Describe the various selection tools and apply them in various ways.</p>
@@ -282,8 +282,9 @@
                                     <hr>
 
                                     <div class="one_half">
-                                        <p class="has-animation">1. Become a UX designer.</p>
-                                        <p class="has-animation">2. You will be able to start earning money from your XD Skills.</p>
+                                        <p class="has-animation">1 Become a UX designer.</p>
+                                        <p class="has-animation">2. You will be able to start earning money from your XD Skills.
+                                        </p>
                                         <p class="has-animation">3. You will be able to add UX designer to your CV.</p>
                                         <p class="has-animation">4. Build a UX project from beginning to end.</p>
                                         <p class="has-animation">5. Become a UI designer.</p>
@@ -292,17 +293,18 @@
                                         <p class="has-animation">8. You will have a project of your own to add to your portfolio.</p>
                                         <p class="has-animation">9. 93 lectures of well-structured, step by step content.</p>
                                         <p class="has-animation">10. Learn to design websites & mobile phone apps.</p>
-                                        
-                                    </div>
-                                    <div class="one_half last">
                                         <p class="has-animation">11. Work with fonts & colors.</p>
                                         <p class="has-animation">12. Prototypeyourdesignswithinteractions.</p>
+                                    </div>
+                                    <div class="one_half last">
+
                                         <p class="has-animation">13. Test on mobile phones.</p>
-                                        <p class="has-animation">14. You'll create realistic prototype complete with micro interactions.</p>
+                                        <p class="has-animation">
+                                            14. You'll create realistic prototype complete with micro interactions.</p>
                                         <p class="has-animation">15. Send your designs for feedback & commenting.</p>
                                         <p class="has-animation">16. Export production ready assets.</p>
                                         <p class="has-animation">17. Create your first UX brief & persona.</p>
-                                        <p class="has-animation">18. Createquickwireframes.</p>
+                                        <p class="has-animation">18.Createquickwireframes.</p>
                                         <p class="has-animation">19. How to use premade UI kits.</p>
                                         <p class="has-animation">20. Learn professional workflow tricks & shortcuts.</p>
                                         <p class="has-animation">21. You will get the finished files so you never fall behind.</p>
@@ -337,23 +339,18 @@
                                         <p class="has-animation">5. Under stand how to design ford if ferent device view ports.</p>
                                         <p class="has-animation">6. How to leve rage tools to ensure pixel perfect design work.</p>
                                         <p class="has-animation">7. How to save tons of time by usings hared styles,symbols,andlibraries.</p>
-                                        <p class="has-animation">8. How to export and hand off the assets developers need to build area lapp.
+                                        <p class="has-animation">8.How to export and hand off the assets developers need to build area lapp.
                                         </p>
-                                        <p class="has-animation">9. How a good UI(userinterface) influences good UX(user experience).</p>
-                                        <p class="has-animation"></p>   
-                                    </div>
-                                    <div class="one_half last">
-                                        <p class="has-animation">10. Be a professional designer who creates better apps faster.</p>
-                                        <p class="has-animation">11. Download a bleexer cisefiles.</p>
-                                        <p class="has-animation">12. Forum support from meand there stof the BYOL crew.</p>
-                                        <p class="has-animation">13. All the techniques used by UX professionals.</p>
-                                        <p class="has-animation">14. Build a mobile app prototype that responses to voice commands.</p>
-                                        <p class="has-animation">15. You will be able to talk correctly with other UX design professionals..</p>
-                                        <p class="has-animation">16. You'll learn how to choose colors.</p>
-                                        <p class="has-animation">17. You'll learn how topick the correct fonts.</p>
-                                        <p class="has-animation">18. You'll be able to send your finished work too ther professional sin the correct formats..</p>
-                                    
-                                        <p class="has-animation"></p>
+                                        <p class="has-animation">9.How a good UI(userinterface) influences good UX(user experience).</p>
+                                        <p class="has-animation">10.Be a professional designer who creates better apps faster.</p>
+                                        <p class="has-animation">11.Download a bleexer cisefiles.</p>
+                                        <p class="has-animation">12.Forum support from meand there stof the BYOL crew.</p>
+                                        <p class="has-animation">13.All the techniques used by UX professionals.</p>
+                                        <p class="has-animation">14.Build a mobile app prototype that responses to voice commands.</p>
+                                        <p class="has-animation">15.You will be able to talk correctly with other UX design professionals..</p>
+                                        <p class="has-animation">16.You'll learn how to choose colors.</p>
+                                        <p class="has-animation">17.You'll learn how topick the correct fonts.</p>
+                                        <p class="has-animation">18.You'll be able to send your finished work too ther professional sin the correct formats..</p>
                                     </div>
 
 
@@ -378,15 +375,12 @@
 
                                 <div id="message"></div>
 
-                                <form method="post" action="https://formspree.io/f/xgeroaob">
+                                <form method="post" action="https://formspree.io/f/mrgrzprq">
                                     <div class="name-box has-animation" data-delay="100">
                                         <input name="name" type="text" placeholder="What's Your Name"><label class="input_label"></label>
                                     </div>
                                     <div class="email-box has-animation" data-delay="150">
                                         <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
-                                    </div>
-                                    <div class="contact-box has-animation" data-delay="100">
-                                        <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
                                     </div>
                                     <div class="message-box has-animation" data-delay="100">
                                         <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
@@ -435,12 +429,19 @@
                                     <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                     <div class="socials-text">Follow Us</div>
                                     <ul class="socials">
-                                        <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
+                                        <li><span class="parallax-wrap"><a class="parallax-element"
+                                            href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span>
+                                        </li>
+                                        <li><span class="parallax-wrap"><a class="parallax-element"
+                                            href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span>
+                                        </li>
+                                        <li><span class="parallax-wrap"><a class="parallax-element"
+                                            href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
+                                        <li><span class="parallax-wrap"><a class="parallax-element"
+                                            href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span>
+                                        </li>
+                                        <li><span class="parallax-wrap"><a class="parallax-element"
+                                            href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
                                     </ul>
                                 </div>
 
@@ -475,15 +476,13 @@
     <div id="clone-image"></div>
     <div id="rotate-device"></div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="/js/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 
-
-<!-- Mirrored from codedchalk.com/uiandux.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 05 May 2021 08:20:37 GMT -->
 </html>
